--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h1 class="m-b-20"><strong>How May <br> I Assist you </strong></h1>
+							<h1 class="m-b-20"><strong>Learn <br>Snail Farming</strong></h1>
 					
 							<p><a class="btn btn-lg btn-circle btn-outline-new-white" href="Snail Academy.html">Enroll Now</a></p>
 						</div>
